Sylow III and Examples

--- a/preamble.tex
+++ b/preamble.tex
@@ -55,6 +55,8 @@
 \DeclareMathOperator{\Out}{Out}
 \DeclareMathOperator{\Orb}{Orb}
 \DeclareMathOperator{\Stab}{Stab}
+\DeclareMathOperator{\Aff}{Aff}
+\DeclareMathOperator{\Fixed}{Fixed}
 \setcounter{MaxMatrixCols}{20}
 
 \NiceMatrixOptions{cell-space-limits=1pt}
