--- a/Notes/Week8/week8.tex
+++ b/Notes/Week8/week8.tex
@@ -149,5 +149,146 @@
 
 
 
+\section[Groups of Order \texorpdfstring{$pq$}{TEXT}]{Groups of Order \texorpdfstring{$\bm{pq}$}{TEXT}}
+\begin{itemize}
+    \item \marginnote{11/16:}Classifying groups of order $|G|=2p$ for $p>2$ prime.
+    \item By Sylow I, there exists a $p$-Sylow $P_p$ and a 2-Sylow $P_2$.
+    \begin{itemize}
+        \item Since $[G:P_p]=2$, HW4 Q6 implies that $P_p$ is normal.
+        \begin{itemize}
+            \item Alternate strategy: By SyIII, $n_p\equiv 1\mod p$ and $n_p=|G|/|N|=|G|/|P|=2p/p=2$. Thus, $n_p=1$ or $n_p=2$. These facts combine to say that $n_p=1$ and $P_p\trianglelefteq G$.
+        \end{itemize}
+        \item By Lagrange's Theorem, we must have $P_p=\gen{x}$ and $P_2=\gen{y}$ for some $x,y\in G$.
+        \item $x^p=e=y^2$.
+        \item $G=\gen{x,y}$.
+    \end{itemize}
+    \item The elements have order 1, 2, $p$ or $2p$ by Lagrange.
+    \item Since $\gen{x}$ is normal, it follows that
+    \begin{gather*}
+        y\gen{x}y^{-1} = \gen{x}\\
+        yxy^{-1}\in\gen{x}\\
+        yxy^{-1}=x^k
+    \end{gather*}
+    where the $x,y$ used throughout are the previously referenced generators (not any sort of arbitrary variable).
+    \item Goal: Put constraints on $k$.
+    \item $k\equiv 0\mod p$ iff $x=e$.
+    \begin{itemize}
+        \item If $k\equiv 0\mod p$, then $yxy^{-1}=x^k=e$, so $x=y^{-1}y=e$.
+        \item If $x=e$, then $x^k=yey^{-1}=e$, so we must have $k\equiv 0\mod p$.
+    \end{itemize}
+    \item A preview of something we will shortly prove.
+    \begin{itemize}
+        \item There are two groups of order $2p$: $D_{2p}$ and $\Z/2p\Z$.
+        \item In the latter, $k=1$.
+        \begin{itemize}
+            \item Since $\Z/2p\Z$ is abelian, the conjugate of any element is itself. Thus, $yxy^{-1}=x^1$.
+        \end{itemize}
+        \item In the former, $k=-1$ (if conjugating by a reflection??).
+        \begin{itemize}
+            \item Recall the multiplication rule $rs=sr^{-1}$, from which we can deduce that $srs^{-1}=r^{-1}$.
+            \item Note that it is proper to use $s$ analogously to $y$ and $r$ analogously to $x$ since reflections ($s$) have order 2 like $y$ and rotations ($r$) can have much higher orders (e.g., $p$).
+        \end{itemize}
+    \end{itemize}
+    \item Another (redundant??) possibility: $yx^iy^{-1}=yx^{ik}y^{-1}$.
+    \item We now prove that there are only two groups of order $2p$.
+    \item Conjugating $x$ by $y$ twice gives us
+    \begin{equation*}
+        x = exe
+        = y^2xy^{-2}
+        = y(yxy^{-1})y^{-1}
+        = yx^ky^{-1}
+        = (yxy^{-1})^k
+        = (x^k)^k
+        = x^{k^2}
+    \end{equation*}
+    \begin{itemize}
+        \item Comparing exponents, we have $k^2\equiv 1\mod p$.
+        \item This is equivalent to $(k^2-1)\equiv 0\mod p$, which in turn is equivalent to $(k+1)(k-1)\equiv 0\mod p$.
+        \item It follows that $k\equiv\pm 1\mod p$.
+    \end{itemize}
+    \item Now we must consider each case in turn.
+    \item If $k=1$, then $G$ is abelian, i.e., $G=P_p\times P_2$.
+    \begin{itemize}
+        \item Example: $\Z/2p\Z\cong\Z/2\Z\times\Z/p\Z$.
+        \item We'll see a lot of this breaking up of groups next quarter.
+        \item Calegari alludes to the \textbf{Chinese remainder theorem}.
+    \end{itemize}
+    \item Theorem (Chinese remainder theorem): Let $m,n$ be relatively prime positive integers. For all integers $a,b$, the pair of congruences
+    \begin{align*}
+        x &\equiv a\mod m\\
+        y &\equiv b\mod m
+    \end{align*}
+    has a solution, and this solution is uniquely determined modulo $mn$.
+    \item If $k=-1$, then $yx=x^{-1}y$.
+    \begin{table}[h!]
+        \centering
+        \small
+        \renewcommand{\arraystretch}{1.2}
+        \begin{tabular}{c|c|c}
+             & $x^i$ & $x^iy$\\
+            \hline
+            $x^j$ & $x^{i+j}$ & $x^{i+j}y$\\
+            $x^jy$ & $x^{j-i}y$ & $x^{j-i}$\\
+        \end{tabular}
+        \caption{Multiplication table for $|G|=2p$ and $k=-1$.}
+        \label{tab:2pmult}
+    \end{table}
+    \begin{itemize}
+        \item We still have that $x^p=1$.
+        \item We want to show based on this multiplication rule that we really have the dihedral group. Once we have this, there's at most one group it could possibly be. Since $D_{2p}$ is such a group, then they must be isomorphic.
+        \item To do so, we show that the rule determines the multiplication table (see Table \ref{tab:2pmult} above).
+        \item Thus, there is at \emph{most} one group.
+        \item But since $D_{2p}$ exists, there is also at \emph{least} one group.
+        \item Therefore, if $k=-1$, we must have $G\cong D_{2p}$.
+    \end{itemize}
+    \item Proposition: Let $|G|=2n$, $n>2$. If $x\in G$ and $|x|=n$, $|y|=2$, $yx=x^{-1}y$ implies $G\cong D_{2n}$.
+    \begin{proof}
+        The multiplication table is uniquely determined (analogous to the above argument).
+    \end{proof}
+    \item Remark about $D_4=K$, where $K$ is the Klein 4-group??
+    \item We now move on to $|G|=pq$, where $p>q$ are both prime.
+    \item Applying S III, we get $n_p$ equals 1 or $q$ and is congruent to 1 mod p, and $n_q$ equals 1 or $p$ and is congruent to 1 mod q.
+    \begin{itemize}
+        \item Thus, $n_p=1$ always and $n_q=1$ unless $p=1\mod q$.
+    \end{itemize}
+    \item If $|G|=pq$ and$p>2$, $p\not\equiv 1\mod q$, then $G\cong\Z/p\Z\times\Z/q\Z$.
+    \item Case where $|G|=q$ and $p\equiv 1\mod q$. Then $P_p=\gen{x}$ and $P_q=\gen{y}$, so $P_p\trianglelefteq G$. This is another (strange??) application of S III.
+    \begin{itemize}
+        \item Using what we have here, we know that $yxy^{-1}=x^k$, $k\not\equiv 0\mod p$. $k=1$ implies $G$ is abelian and $G\cong\Z/p\Z\times\Z/q\Z$.
+        \item Now we just need to conjugate $x$ by $y$, $q$ times over: $x=y^qxy^{-q}=x^{k^q}$. Thus, $k^q\equiv 1\mod p$.
+        \item Unlike when $q=2$, we could factor then. Now we've got a more difficult problem; can't factor it.
+        \item Does there exist $q$ satisfying the above property? If so, how many are there?
+        \item Think about this as an identity in the multiplicative group $(\Z/p\Z)^\times$ which has order $p-1$. We can thus deduce by Lagrange that $q|p-1$.
+        \item Sylow I: There exists $\eta$ of order $q$ such that $\eta,\eta^2,\eta^3,\dots,\eta^{q-1}$ all have order $p$.
+        \item We could argue that $(\Z/p\Z)^\times$ is cyclic (and in fact it is), but here's something else: We have that $k^q-1=(k-1)(k-\eta)\cdots(k-\eta^{q-1})$. This is factoring polynomials mod $p$ (weird for now, but very commonplace next quarter).
+        \item Fix $\eta$. Then $yxy^{-1}=x^{\eta^2}$.
+    \end{itemize}
+    \item Claim I: This determines the multiplication table; $\gen{x}\subset G$. The right cosets $\gen{x},\gen{x}y,\dots,\gen{x}y^{q-1}$. $G/P_p\cong\Z/q\Z$. If we have all of the elements of the form $x^iy^j$, do we know how to multiply these together? In particular, can we determine how to write
+    \begin{equation*}
+        x^iy^jx^ay^b = x^ry^s
+    \end{equation*}
+    We have that $yx=x^{\eta^i}y$, so the multiplication table is determined. This implies that there is at most $q-1$ nonabelian groups.
+    \item Now we have
+    \begin{gather*}
+        yxy^{-1} = x^{\eta^i}\\
+        y^2xy^{-1} = x^{\eta^{2i}}\\
+        \vdots\\
+        y^rxy^{-r} = x^{\eta^{ri}}
+    \end{gather*}
+    Thus, $\eta^{ri}=\eta$. Therefore, $y_i=y^r$ so $yxy^{-1}=x^\eta$, so there is at most 1 non abelian group.
+    \item But, $P$ a $p$-Sylow of $S_p$ and $N=N_{S_p}(P)$ and $C=C_{S_p}(P)$ gives us $|N|=p(p-1)$ and $|C|=p$ so that $N/C=(\Z/p\Z)^\times$. We now take the preimage in $N$ so that $\gen{y,x}=G$. $|G|=pq$. Then $P,G$ abelian would imply $G\subset C$, but this is not possible since $G$ ahs $pq$ and $C$ has $p$, so $G$ is not abelian.
+    \item Example $21=7\cdot 3$. $2^3\equiv 1\mod 7$. Then we take $\Z/7\Z\to\Z/7\Z$ so we take $x\mapsto x+a$, $x\mapsto 2x+a$, $x\mapsto 4x+a$, on and on where $a$ is a constant. There are 21 such maps.
+    \item If $\eta^1=1\mod p$, then the affine maps from $\Z/p\Z$ to $\Z/p\Z$ send $x\mapsto \eta^ix+b$.
+    \item If we call $\sigma=x+1$ and and $\tau=x\to x\eta$, then $x\mapsto x+\eta=\sigma\eta$.
+    \item The set of affine maps has both $\Z/p\Z$ and $(\Z/p\Z)^\times$ as subsets.
+    \item If we think about the groups we've classified, we've classified $1,p,p^2,p^3,pq$. $p^3$ just a bit, though. Limit to this strategy: The prime factorizations are so simple that we get immediate and very restrictive information about the $p$-Sylow subgroups (e.g., the biggest one is normal). This can't occur indefinitely because we will eventually get to cases like $A_5$ of order 60, for example, which has no normal subgroups.
+    \item If we think about our progress (classifying groups of low order up to 4), then going upwards, the first group we can't do is of order $12=2\cdot 2\cdot 3$. This is like $A_4$, which is not too bad but all the same, $n_3=1,4$, $n_2=1,3$. If $n_3=4$, then we have an action of $G$ on the 3 Sylow's, giving a transitive map from $G$ to $S_4$. Thus, the stabilizer has size 3.
+    \item $n_3=1$, so $G=P_3\times P_2$. $n_3=1$ and $n_2=3$, so $G\times S_3$. Since there is such an explosion of groups, this is not the optimal strategy. Thus, ...
+    \item We may do a review session of the 25 practice problems over Twitch with him playing speedtest.
+    \item At this point, we have the tools to do every outgoing homework problem, save the last one of the last psets on symmetry groups.
+\end{itemize}
+
+
+
 
 \end{document}
