Symmetries in Three-Space

--- a/Notes/Week8/week8.tex
+++ b/Notes/Week8/week8.tex
@@ -290,5 +290,23 @@
 
 
 
+\section{Symmetries in Three-Space}
+\begin{itemize}
+    \item \marginnote{11/18:}Classify the finite subgroups of $\text{SO}(3)$.
+    \item We can take any regular $n$-gon and think of $D_{2n}\subset\text{O}(2)\subset\text{SO}(2)$.
+    \item Five platonic solids: Te, Cu, Oc, Do, and Ic.
+    \item Cu and Oc are paired and Do and Ic are paired. $\text{Te}\cong A_4$, $\text{Cu}\cong\text{Oc}\cong S_4$, and $\text{Do}\cong\text{Ic}\cong A_5$.
+    \item Theorem: Let $G\subset\text{SO}(3)$ be a finite group. Then $G$ is conjugate to one of these groups.
+    \item Let $g\in\text{SO}(3)$, $g\neq e$. The only fixed points of $g$ lie on a line $\ell$ which contains the origin 0.
+    \item We have a group action $\text{SO}(3)\acts S^2=\{v\mid\norm{v}=1\}$. Consider $G\acts S^2$. Any $g\neq e$ has exactly 2 fixed points which we may call $\{\pm u\}$ for some $u$.
+    \item Thus, $|\Stab(x)|=1$ for all but finitely many points $x\in S^2$.
+    \item Claim:
+    \begin{equation*}
+        \sum_{x\in S^2}|\Stab(x)-1|
+    \end{equation*}
+\end{itemize}
+
+
+
 
 \end{document}
