Problem Set 7 (Questions)

--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -41,6 +41,9 @@
 \subfile{PSet6/pset6.tex}
 \newpage
 
+\subfile{PSet7/pset7.tex}
+\newpage
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
